# iish

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_MD_UPDATES.md  ONCOVAX_ACCESS_GAP_MODULES.md  ONCOVAX_CARE_SPEC.md  ONCOVAX_CLAUDE_CODE_SESSIONS.md  ONCOVAX_COOL_SPEC.md  ONCOVAX_ENGINE_SPEC.md  ONCOVAX_INTEL_SPEC.md  ONCOVAX_LEARN_SPEC.md  ONCOVAX_PHASE0_EXPANSION_SPEC.md  ONCOVAX_PHASE0_PREVENT_SPEC.md  ONCOVAX_PHASE2_SESSIONS.md  ONCOVAX_PHASE3_SESSIONS.md  ONCOVAX_PHASE4_SESSIONS.md  ONCOVAX_PHASE5_SESSIONS.md  ONCOVAX_PLATFORM_SPEC.md  ONCOVAX_PREVENTIVE_TRIAL_MATCHER_SPEC.md  ONCOVAX_SHARED_UI_MIGRATION.md  ONCOVAX_SURVIVORSHIP_SPEC.md  ONCOVAX_UNIFIED_ROADMAP.md  ONCOVAX_VISUAL_SPEC.md  SHARED_SPEC.md  docker-compose.yml  oncovax-tracker.html  package.json  pnpm-lock.yaml  turbo.json  vercel.json
services/neoantigen-pipeline/: Cargo.toml
services/neoantigen-pipeline/alignment/: Cargo.toml  Dockerfile
services/neoantigen-pipeline/alignment/src/: aligner.rs  main.rs  postprocess.rs  quality.rs
services/neoantigen-pipeline/hla-typer/: Cargo.toml  Dockerfile
services/neoantigen-pipeline/mrna-designer/: requirements.txt
services/neoantigen-pipeline/neoantigen-predictor/: Dockerfile  requirements.txt
services/neoantigen-pipeline/peptide-generator/: Dockerfile  requirements.txt
services/neoantigen-pipeline/pipeline-common/: Cargo.toml
services/neoantigen-pipeline/ranking/: requirements.txt
services/neoantigen-pipeline/structure-predictor/: Dockerfile  requirements.txt
services/neoantigen-pipeline/variant-caller/: Cargo.toml  Dockerfile
(+622 files in other folders)
