[workspace]
resolver = "2"
members = ["pipeline-common", "alignment", "variant-caller", "hla-typer"]

[workspace.dependencies]
tokio = { version = "1.42", features = ["full"] }
aws-sdk-s3 = "1.65"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
async-nats = "0.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
