[package]
name = "pipeline-common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
async-nats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
